# ndx-events

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  NEXTSTEPS.md  README.md  example_usage.nwb  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements.txt  setup.cfg  setup.py  test_events.nwb
.github/workflows/: check_external_links.yml  run_all_tests.yml  run_coverage.yml  validate_schema.yml
docs/source/: conf.py  conf_doc_autogen.py  format.rst  index.rst
examples/: write_ttls_events.py
spec/: ndx-events.extensions.yaml  ndx-events.namespace.yaml
src/pynwb/ndx_events/: __init__.py  events.py  ndx_events_nwb_file_io.py
src/pynwb/ndx_events/io/: __init__.py  events.py
src/pynwb/tests/: example_usage.py  test_events.py  test_example_usage.py
src/pynwb/tests/integration/hdf5/: test_events.py
src/pynwb/tests/unit/: test_events.py
src/spec/: create_extension_spec.py
