[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndx-events"
version = "0.3.0"
authors = [
    { name="Ryan Ly", email="rly@lbl.gov" }
]
description = "NWB extension for storing timestamped event and TTL pulse data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3"}
classifiers = [
    # TODO: add classifiers before release
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    'NeurodataWithoutBorders',
    'NWB',
    'nwb-extension',
    'ndx-extension',
]
dependencies = [
    "pynwb>=2.5.0",
    "hdmf>=3.10.0",
]

# TODO: add URLs before release
[project.urls]
"Homepage" = "https://github.com/rly/ndx-events"
# "Documentation" = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/rly/ndx-events/issues"
"Discussions" = "https://github.com/rly/ndx-events/discussions"
"Changelog" = "https://github.com/rly/ndx-events/CHANGELOG.md"

[tool.hatch.build]
include = [
    "src/pynwb",
    "spec/ndx-events.extensions.yaml",
    "spec/ndx-events.namespace.yaml",
]
exclude = [
    "src/pynwb/tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pynwb/ndx_events",
    "spec"
]

[tool.hatch.build.targets.wheel.sources]
"spec" = "ndx_events/spec"

[tool.hatch.build.targets.sdist]
include = [
    "src/pynwb",
    "spec/ndx-events.extensions.yaml",
    "spec/ndx-events.namespace.yaml",
    "docs",
]
exclude = []

[tool.pytest.ini_options]
addopts = "--cov --cov-report html"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,hdmf-common-schema,./docs/_build/*,*.ipynb"

[tool.coverage.run]
branch = true
source = ["src/pynwb"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb|docs/"

[tool.ruff]
select = ["E", "F", "T100", "T201", "T203"]
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
]
line-length = 120

[tool.ruff.per-file-ignores]
"src/spec/create_extension_spec.py" = ["T201"]
"src/pynwb/tests/test_example_usage.py" = ["T201"]

[tool.ruff.mccabe]
max-complexity = 17