[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndx-events"
version = "0.4.0"
authors = [
    { name="Ryan Ly", email="rly@lbl.gov" }
]
description = "NWB extension for storing timestamped event and TTL pulse data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3"}
classifiers = [
    # TODO: add classifiers before release
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    'NeurodataWithoutBorders',
    'NWB',
    'nwb-extension',
    'ndx-extension',
]
dependencies = [
    "pynwb>=2.8.2",
    "hdmf>=3.14.4",
]

# TODO: add URLs before release
[project.urls]
"Homepage" = "https://github.com/rly/ndx-events"
# "Documentation" = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/rly/ndx-events/issues"
"Discussions" = "https://github.com/rly/ndx-events/discussions"
"Changelog" = "https://github.com/rly/ndx-events/CHANGELOG.md"

# Include only the source code under `src/pynwb/ndx_events` and the spec files under `spec`
# in the wheel.
[tool.hatch.build.targets.wheel]
packages = [
    "src/pynwb/ndx_events",
    "spec"
]

# Rewrite the path to the `spec` directory to `ndx_events/spec`.
# `ndx_events/__init__.py` will look there first for the spec files.
# The resulting directory structure within the wheel will be:
# ndx_events/
# ├── __init__.py
# ├── spec
# └── widgets
[tool.hatch.build.targets.wheel.sources]
"spec" = "ndx_events/spec"

# The source distribution includes everything in the package except for the `src/matnwb` directory and
# git and github-related files.
[tool.hatch.build.targets.sdist]
exclude = [
    ".git*",
    "src/matnwb",
]

[tool.pytest.ini_options]
# uncomment below to run pytest always with code coverage reporting. NOTE: breakpoints may not work
# addopts = "--cov --cov-report html"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,hdmf-common-schema,./docs/_build/*,*.ipynb"

[tool.coverage.run]
branch = true
source = ["ndx_events"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb|docs/"

[tool.ruff]
lint.select = ["E", "F", "T100", "T201", "T203"]
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
  "docs/source/conf.py",
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"src/pynwb/ndx_events/__init__.py" = ["E402", "F401"]
"src/spec/create_extension_spec.py" = ["T201"]
"src/pynwb/tests/test_example_usage.py" = ["T201"]
"examples/*" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 17
